# CRayEngine

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build_windows.sh  toolchain-mingw.cmake
.github/: copilot-instructions.md
src/: game_config.h  main.c  main.cpp
src/assets/atlas/: atlas_data.c  atlas_data.h  atlas_debug.html
src/engine/core/: animation.c  animation.h  animationSystem.c  animationSystem.h  asset_manager.c  asset_manager.h  command_api.h  command_bus.c  command_bus.h  config.h  cre_RenderSystem.c  cre_RenderSystem.h  cre_RendererCore.c  cre_RendererCore.h  cre_camera.c  cre_camera.h  cre_camera_utils.c  cre_camera_utils.h  cre_colors.h  cre_commandBus.c  cre_commandBus.cpp  cre_commandBus.h  cre_commandBus_defs.h  cre_config.h  cre_engine.c  cre_engine.cpp  cre_engine.h  cre_enginePackets.h  cre_enginePhases.h  cre_logger.cpp  cre_logger.h  cre_renderer.c  cre_renderer.h  cre_systemPackets.h  cre_types.h  cre_typesMacro.h  cre_uiHelper.c  cre_uiHelper.h  engine.c  engine.h  (+18 more)
src/engine/ecs/: cre_components.h  cre_entityAPI.c  cre_entityAPI.cpp  cre_entityAPI.h  cre_entityEvents.h  cre_entityManager.c  cre_entityManager.cpp  cre_entityManager.h  cre_entityRegistry.h  cre_entitySystem.c  cre_entitySystem.cpp  cre_entitySystem.h
src/engine/loaders/: cre_assetManager.c  cre_assetManager.cpp  cre_assetManager.h
src/engine/memory/: cre_arena.cpp  cre_arena.h
src/engine/physics/: physics_defs.h  physics_system.c  physics_system.h  spatial_hash.c  spatial_hash.h
src/engine/platform/: cre_input.c  cre_input.cpp  cre_input.h  cre_sys.cpp  cre_sys.h  cre_time.cpp  cre_time.h  cre_viewport.c  cre_viewport.cpp  cre_viewport.h
src/engine/scene/: cre_sceneManager.c  cre_sceneManager.cpp  cre_sceneManager.h  cre_scenes.h
src/engine/systems/animation/: cre_animationAPI.c  cre_animationAPI.cpp  cre_animationAPI.h  cre_animationSystem.c  cre_animationSystem.cpp  cre_animationSystem.h
src/engine/systems/audio/: cre_audioAPI.c  cre_audioAPI.cpp  cre_audioAPI.h  cre_audioSystem.c  cre_audioSystem.cpp  cre_audioSystem.h
src/engine/systems/camera/: cre_camera.c  cre_camera.h  cre_cameraAPI.c  cre_cameraAPI.cpp  cre_cameraAPI.h  cre_cameraSystem.c  cre_cameraSystem.cpp  cre_cameraSystem.h  cre_cameraUtils.c  cre_cameraUtils.cpp  cre_cameraUtils.h
src/engine/systems/debug/: cre_debugSystem.c  cre_debugSystem.cpp  cre_debugSystem.h  cre_profilerSystem.c  cre_profilerSystem.cpp  cre_profilerSystem.h
src/engine/systems/physics/: cre_physicsAPI.c  cre_physicsAPI.cpp  cre_physicsAPI.h  cre_physicsSystem.c  cre_physicsSystem.cpp  cre_physicsSystem.h  cre_physics_defs.h  cre_spatialHash.c  cre_spatialHash.cpp  cre_spatialHash.h
src/engine/systems/render/: cre_RenderSystem.c  cre_RenderSystem.h  cre_RendererCore.c  cre_RendererCore.h  cre_renderAPI.c  cre_renderAPI.cpp  cre_renderAPI.h  cre_renderSystem.c  cre_renderSystem.cpp  cre_renderSystem.h  cre_rendererCore.c  cre_rendererCore.cpp  cre_rendererCore.h
src/game/: controlSystem.c  controlSystem.cpp  controlSystem.h  debugSystem.c  debugSystem.h  entity_types.h  game.c  game.cpp  game.h  game_animation.c  game_animation.h  game_config.h  game_over.c  game_over.cpp  game_over.h  game_prototypes.c  game_prototypes.cpp  game_prototypes.h  game_scenes.c  game_scenes.cpp  game_scenes.h  game_systems.c  game_systems.h  menu.c  menu.cpp  menu.h
src/game/atlas/: atlas_data.h
src/game/config/: settings.cfg
src/game/entities/: food.c  food.h  snake.c  snake.h
tools/: .package.json.kate-swp  build_assets.py  header_template.mustache  pack_atlas.js  package.json
